- Library view-state persistence now writes `baseline.txt`, `latest.txt`, `blocked.txt`, and `view_state.json` with staged atomic finalize semantics, and returns explicit fail-closed write error codes on library-state write/clear failures.
- Ticket-pack contract coverage now enforces report-state extraction from `report_card_v0.json` and validates digest identity line format (`sha256:<64hex>`) in `ticket_summary.txt`.
- Ticket-pack contract coverage now also enforces text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` plus key-value lines) when structured report JSON is absent.
- Windows shell `report_card.txt` and `report_card_v0.json` now include adapter metadata and capability counts when adapter evidence exists:
- `adapterMeta=class:<class> mode:<mode> source:<format> reasons:<codes>`
- `capabilities=requested:<n> granted:<n> denied:<n>`
- New bind/unbind right-click flow:
- Bind to WeftEnd and Unbind from WeftEnd verbs for files, shortcuts, and folders.
- .lnk rewrap mode preserves icon and stores an original shortcut backup for safe restoration.
- Legacy metadata compatibility fixes prevent stale-state and strict-mode unbind failures.
- Shell integration simplification: only WeftEnd Launchpad and WeftEnd Download shortcuts are installed by default.
- Structured report artifacts available for UI and automation:
- report_card_v0.json
- report_card.txt

Validation
- npm run compile --silent: pass
- node dist/src/tools/windows_shell_assets.test.js: pass
- node dist/src/tools/greenteam/release_artifacts_present.test.js: pass
- npm test: pass (on release hardening sweep state)

Not included
- Malware scoring or reputation.
- Cloud analysis or telemetry.
- Automatic execution of native binaries outside explicit gated flows.
- Automatic trust root generation.

Operator notes
- Standard and portable release zips each ship with a .sha256 file for verification.