@@ -88,6 +88,7 @@ suite("auto scan on change triggers safe-run", async () => {
   const runDir = findRunDir(libraryRoot);
   const triggerPath = path.join(runDir, "watch_trigger.txt");
   assert(fs.existsSync(triggerPath), "watch_trigger.txt missing");
+  assert(!fs.existsSync(`${triggerPath}.stage`), "watch trigger stage file must not remain after finalize");
   const text = fs.readFileSync(triggerPath, "utf8");
   assert(text.includes("trigger=WATCH"), "expected trigger=WATCH");
 });
