@@ -80,6 +80,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - `intake` output now stages/finalizes (`<out>.stage` -> `<out>`), replacing stale out-roots and preventing partial intake-output residue from appearing as finalized evidence.
 - `license issue` output now stages/finalizes (`<out>.stage` -> `<out>`), preventing partial output residue and guaranteeing stale license-file replacement on successful finalize.
 - Library view-state persistence now writes `baseline.txt`, `latest.txt`, `blocked.txt`, and `view_state.json` with staged atomic finalize semantics, and returns explicit fail-closed write error codes on library-state write/clear failures.
+- Watch trigger output now stages/finalizes `watch_trigger.txt` atomically and cleans `.stage` residue on write failure.
 - Ticket-pack contract tests now pin report-state parsing from `report_card_v0.json` and enforce digest-line format (`sha256:<64hex>`) for ticket summary identity fields.
 - Ticket-pack contract tests now also pin text fallback parsing from `report_card.txt` (`STATUS/BASELINE/LATEST/BUCKETS` and key-value lines) when structured report JSON is absent.
 - Windows shell report card outputs now surface adapter evidence directly:
